--- a/Организации/Братство тени.md
+++ b/Организации/Братство тени.md
@@ -1,4 +1,4 @@
-**Братство Тени** — легендарное сообщество наёмных убийц, окутанное плотной завесой тайн. Его истинные цели остаются предметом жарких споров и противоречивых толкований, порождая множество слухов, каждый из которых рисует организацию в совершенно ином свете:
+﻿**Братство Тени** — легендарное сообщество наёмных убийц, окутанное плотной завесой тайн. Его истинные цели остаются предметом жарких споров и противоречивых толкований, порождая множество слухов, каждый из которых рисует организацию в совершенно ином свете:
 
 1.  **Наёмники Тьмы:** Наиболее распространённая версия гласит, что Братство — это прежде всего бизнес. Они предлагают услуги устранения неугодных за баснословные суммы, действуя с леденящей кровь эффективностью. Их клиентами якобы становятся короли, опальные аристократы, богатые купцы и главы враждебных кланов, желающие избавиться от врагов без личного участия. Следы их работы — тела, найденные при странных обстоятельствах: отравленный кубок на пиру, кинжал в спину в тёмном переулке, несчастный случай, слишком идеальный, чтобы быть правдой (например, падение с башни без свидетелей). Их девиз в этой версии прост: *"Всё имеет свою цену, даже смерть"*.
 2.  **Служители Разрушения:** Другие, более мрачные легенды, приписывают Братству религиозный фанатизм. Согласно этим слухам, адепты поклоняются забытому или запретному божеству Хаоса и Разрушения. Их убийства — не просто контракты, а кровавые ритуалы, призванные ослабить устои мира, посеять страх и приблизить глобальный катаклизм или возрождение их мрачного бога. Жертвы выбираются не только по заказу, но и по символическому значению: правители, несущие порядок; священники, проповедующие добро; учёные, стремящиеся к свету знания. Следы их присутствия на месте преступления могут включать странные, не поддающиеся расшифровке символы, выжженные на стенах или вырезанные на коже, или отсутствие крови у жертвы, словно её поглотила сама тьма.
@@ -10,3 +10,4 @@
 *   **Иерархия и Ритуалы:** Все слухи сходятся в том, что внутри Братства царит строжайшая дисциплина и сложная иерархия (Неофиты, Адепты, Мастера Тени). Посвящение якобы связано с опасными испытаниями и клятвами крови. Нарушителей внутренних законов ждет немедленная и беспощадная кара.
 
 Таким образом, Братство Тени остается **живой легендой**, существующей на стыке криминального мира, религиозного мистицизма и утопических (или антиутопических) идеалов. Истина, как и сами члены Братства, надежно скрыта во тьме, оставляя простор лишь для догадок, страхов и надежд.
+
