--- a/География_мира.md
+++ b/География_мира.md
@@ -142,15 +142,23 @@ tags: [geography, world-building, locations, history]
 - **Торговля:** Активные морские пути
 - **Проблемы:** Затопление прибрежных территорий
 
-### **Драконий хребет:**
-- **Расположение:** К востоку и югу от Велюградии
-- **Функция:** Естественная граница с Краковеем
-- **Особенности:** Горы, возможно с древними руинами
-- **Торговля:** Горные перевалы для торговых путей
-- **Население:** Современные гномы (потомки цвергов)
-  - **Характер:** Мастеровитый народ, неплохо торгующий
-  - **Память:** Влияние древнего цвергов величия на их жизнь
-  - **Культура:** Сохраняют традиции предков, но адаптировались к новым условиям
+### **Гидросеть и бассейны:**
+- **Белая река (северный сток):** Крупная судоходная река от предгорий Каменных Пил к Зелёному морю. Северный узел — [[Любенбург]], южный — порт‑полис [[Граион]].  
+- **Южные реки (южный сток):** Система крупных рек, текущих на юг в тёплые внутренние бассейны. Важнейшие:  
+  - **Сурьма:** Полноводная, равнинная, широкие поймы; зерновые баржи и солончаки в низовьях.  
+  - **Долгая:** Медленная, меандрирующая через лёссовые холмы; известна сетью древних каналов и запрудинами.  
+  - **Камышица:** Болотно‑луговая, много проток; весной разливы до нескольких вёрст.  
+- **Волоки и древние каналы:** Верхние течения Белой связаны с истоками южных рек через волоки лигунов и древние каналы (часть восстановлена в протекторате Астерия). Ключевые узлы:  
+  - «Великий Волок Лигунов» (средняя Белая ↔ верхняя Долгая),  
+  - «Канал Астерия» (правобережные притоки Белой ↔ верхняя Сурьма),  
+  - «Озёрный Перекид» у северных отрогов Каменных Пил (Белая ↔ Камышица через озёрную гряду).  
+
+### **Каменные Пилы (бывш. Драконий хребет):**
+- **Расположение:** К юго‑востоку от Зелёного моря; перегораживают путь от северных равнин к плато Хетсар.  
+- **Функция:** Естественная и инженерная граница; контроль перевалов означает контроль торговых путей.  
+- **Особенности:** Пилообразные гребни, древние настилы и серпантины; руины дорожных обелисков.  
+- **Торговля:** Перевалы и «царские дороги» с рунами‑уплотнителями.  
+- **Население:** Современные гномы (потомки цвергов); на северных отрогах — [[Турсы|Турсы]].
 
 ### **Острова:**
 - **Количество:** Группа больших островов
@@ -161,6 +169,10 @@ tags: [geography, world-building, locations, history]
 ---
 
 ## **ТОРГОВЫЕ ПУТИ**
+
+### **Речные пути**
+- **Белая река:** Главная зерновая артерия. Северный конец — [[Любенбург]]; южный конец — порт‑полис **Граион** (союз городов Грайев).  
+- **Связи:** Граион ↔ прибрежные колонии Грайев; Любенбург ↔ внутренние рынки Велюградии и Краковея.  
 
 ### **Морские пути:**
 - **Зелёное море:** Основная торговая артерия
@@ -174,8 +186,11 @@ tags: [geography, world-building, locations, history]
 
 ### **Торговые центры:**
 - **Любенбург:** Торговый центр восточной части моря
+- **Граион:** Южный порт у устья Белой реки; перевалочный пункт зерна полисов Грайев
 - **Велюмарк:** Региональный центр (подтоплен)
 - **Островные порты:** Морская торговля
+ - **Оппидумы гельвинов:** Каменные центры соли и камня на холмах
+ - **Переправы лигунов:** Узлы волоков (Белая ↔ Долгая/Сурьма)
 
 ---
 
