--- a/Народы/Вилты 3.md
+++ b/Народы/Вилты 3.md
@@ -40,22 +40,24 @@ created: 2025-08-13 04:04:53
 - **Жрецы Ветра** – хранители легенд и магии стихий.  
 - **Ремесленники и пастухи** – свободные, но подчинённые воинам.  
 
-Когда в степи началась **Великая Сушь**, реки иссякли, и стада стали гибнуть. Три брата из рода **Крака** (аналогия: миф о Чехе, Лехе и Русе) подняли народ и повели его на запад.  
+Когда в степи началась **Великая Сушь**, реки иссякли, и стада стали гибнуть. Три брата из рода **Крака** (аналогия: миф о Чехе, Лехе и Русе) подняли народ и повели его на запад: старший — Бетурир Крак (север, Краковей), средний — Астерий Крак (юг, Аэрин; хребет обошёл с юга), младший пал в начале завоевания.  
 
 #### **Вторжение в Иценские земли**  
-Вилты не были обычными грабителями – они искали новую родину. Их тактика включала:  
+Вилты искали новую родину. Их тактика включала:  
 - **Обманные манёвры** – ложные отступления, засады (как у гуннов).  
 - **Использование местных раздоров** – ицены потеряли вождей, и вилты предложили союз некоторым племенам.  
 - **Быстрое строительство укреплений** – на захваченных землях они сразу возводили городища.  
 
 #### **Разделение и создание королевств**  
 У **Драконьего хребта** народ разделился:  
-1. **Северные вилты** (Краковей) – сохранили кочевые традиции, но переняли культуру местных племён (как булгары).  
-2. **Южные вилты** (Аэрин) – смешались с иценами, создав феодальное королевство с тяжелой конницей (аналогия: готы в Испании).  
+1. **Северные вилты** (Краковей) – сохранили кочевые традиции, но переняли культуру местных племён.  
+2. **Южные вилты** (Аэрин) – смешались с иценами, создав королевство с сильной тяжёлой конницей; позднее — переход к республиканской форме управления.  
 
 #### **Наследие вилтов**  
 - **Язык:** Стал основой для местных наречий.  
 - **Военное дело:** Их конные лучники стали элитой новых королевств.  
-- **Мифология:** Легенды о Краке и Великом Исходе стали священными.  
+- **Мифология:** Легенды о Краке и Великом Исходе стали священными; в Аэрине — полноценный политеизм, Свет (Велор) — аристократическое божество; общий термин для жрецов — бахарь, жрецы Света — велориты; вместо «шаманов» — маги (индивидуальная ритуальная практика).  
+
+> Черновик/источник. Актуальная каноническая версия: [[Вилты]].
 
 **Вывод:** Вилты – синтез кочевой мощи (гунны, арии) и способности к оседлой государственности (готы, булгары), что делает их динамичным народом в вашей вселенной.
