--- a/Народы/вилты 1.md
+++ b/Народы/вилты 1.md
@@ -9,6 +9,8 @@ created: 2025-08-13 03:37:58
 
 ![17. Социальные отношения в Средневековых цивилизациях Азии|300x121](https://d2u1z1lopyfwlx.cloudfront.net/thumbnails/3016d910-740b-53d9-9a5c-9264e10d900e/1c211076-4891-5a4b-91e6-205ea03238fe.jpg)
 
+> Черновик/источник. Актуальная каноническая версия: [[Вилты]].
+
 Социальная структура и поведение кочевых племен, таких как вилты, действительно в целом соответствуют типичным свойствам кочевых сообществ Средневековья, особенно аналогам праславян и скифов, как вы описали.
 
 Основные черты кочевых народов, релевантные для вашего повествования о вилтах, включают:
