--- a/Народы/вилты 2.md
+++ b/Народы/вилты 2.md
@@ -16,11 +16,11 @@ created: 2025-08-13 03:47:32
     - Общество делится на воинов, ремесленников, пастухов и земледельцев. Особое уважение вызывают воины и шаманы.
 2. **Религия:**
     
-    - Вилты поклоняются множеству богов, главным из которых является бог света Велор.
-    - Шаманы играют ключевую роль в религиозной жизни, проводя обряды и исцеления.
+    - В Аэрине — полноценный политеизм; Свет (Велор) включён в пантеон и имеет аристократический оттенок.
+    - Маги (вместо «шаманы») ведут индивидуальную ритуальную практику и работу с духами; бахари — жрецы пантеона, велориты — бахари культа Света.
 3. **Обычаи и традиции:**
     
-    - Вилты не признают собственности на землю, считая её общей и данной богами.
+    - Степные вилты не признают частной собственности на землю, считая её общинной; у южан формируются наследуемые владения.
     - Женщины занимают особое место в обществе, и их убийство, даже на войне, считается великим позором.
     - Многожёнство распространено и способствует увеличению численности племени.
 4. **Одежда:**
@@ -40,7 +40,7 @@ created: 2025-08-13 03:47:32
 
 1. **Жилище:**
     
-    - Вилты живут в юртах, которые легко разбираются и перевозятся. Юрты сделаны из дерева и кожи, с очагом для приготовления пищи и обогрева.
+    - Вилты живут в юртах (кочевые); у оседлых вилтов — укреплённые городища и деревянные усадьбы.
 2. **Пища:**
     
     - Основу рациона составляют мясо, молоко и молочные продукты, а также зерно, овощи и фрукты.
@@ -55,7 +55,9 @@ created: 2025-08-13 03:47:32
 
 1. **Легенда о трёх братьях:**
     
-    - Три брата из рода Крака получили знак от богов вести свой народ к новой земле. Старший брат основал королевство Краковей, средний — королевство Аэрин, а младший остался в степях.
+    - Три брата из рода Крака получили знак вести народ к новой земле. Старший Бетурир Крак основал Краковей, средний Астерий Крак — Аэрин (хребет обошёл с юга), младший пал в начале завоевания.
+
+> Черновик/источник. Актуальная каноническая версия: [[Вилты]].
 2. **Мифы и легенды:**
     
     - Вилты имеют богатую мифологию, включая истории о героях и взаимодействии с богами.
