--- a/Тонущий_мир.md
+++ b/Тонущий_мир.md
@@ -60,3 +60,7 @@ WHERE contains(file.folder, this.file.folder) AND type AND (!description OR desc
 {{include:sections/Dataview_ГородаПровинции.md}}
 
 
+> [!tip] Методички
+> - [[Справочник/Справочник_писателя|Справочник писателя]]
+
+
