Добавлены новые главы, локации и материалы

--- a/Народы/Месы.md
+++ b/Народы/Месы.md
@@ -23,7 +23,7 @@ image: Мои Проекты/Тонущий_мир/Теговые_картинк
 **Родина:** [[Ютаборг]]  
 **Численность:** 320000  
 **Язык:** Ютанский  
-**Религия:** [[Пилотеизм]]  
+**Религия:** [[Политеизм]]  
 
 ## Описание
 
