--- a/Редактор_настроек.md
+++ b/Редактор_настроек.md
@@ -37,6 +37,6 @@ created: "2025-08-11"
 ## Ссылки
 - [[Настройки_мира|Настройки мира]]
 - [[Фракции|Фракции]]
-- [[Государства|Государства]] 
+-[[1_Пробный/тест/Государства|Государства]]] 
 
 
