Обновление информации о городах и провинциях, включая изменения в описаниях, добавление новых данных о населении и экономике, а также удаление устаревших файлов.

--- a/Локации/Города/Барраир.md
+++ b/Локации/Города/Барраир.md
@@ -9,7 +9,7 @@ tags:
   - place
   - city
 faction: Другое
-province:
+province: Велюградия
 ---
 
 # Барраир
@@ -17,89 +17,105 @@ province:
 **Тип:** Город  
 **Климат:** Умеренный  
 **Фракция:** Другое  
-**Провинция:** 
+**Провинция:** [[Велюградия]]
 
+## Краткое резюме
 
-## Описание
-Город Цвергов на поверхности
+Барраир — древний город гномов, некогда процветающий на поверхности, а теперь лежащий в руинах под современным городом [[Гарды]]. Он был построен из уникального материала — Цемента Цвергов, что делало его практически неуязвимым для разрушений. Сегодня от Барраира остались лишь воспоминания и руины, на месте которых возник новый город.
 
-## История
-[История основания и развития]
-Основан в 2230 до [[Календарь_и_летоисчисление#сокращения|Э.Р.]] Разрушен 67 до Э.Р. во время Великой войны. На его фундаменте построены Гарды
+## Основная информация
 
-## География
-- **Расположение:** 
-- **Рельеф:** 
+- **Тип:** Город (разрушен)
+- **Статус:** Разрушен (67 до Э.Р.), на его месте построен [[Гарды|Гарды]])
+- **Климат:** Умеренный
+- **Фракция:** Другое (Изначально - гномы, позже - часть королевства Аэрон)
+- **Провинция:** [[Велюградия]]
+- **Население (до разрушения):** 30000
+- **Основные народы:** Гномы, Бриготы, Вердоны, Унеты, Ицены
+- **Язык:** Койне из языков местных народов
+
+## История и этапы развития
+
+### Основание и расцвет (до 2230 до Э.Р.)
+
+Барраир был основан в 2230 году до Эпохи Республики (Э.Р.) как наземный город гномов, потомков древней цивилизации цвергов. В отличие от подземных городов своих предков, Барраир был построен на поверхности и стал символом адаптации гномов к новым условиям жизни. Город был построен из уникального материала — Цемента Цвергов, обладающего исключительной прочностью и устойчивостью к различным воздействиям, включая воду, огонь и время.
+
+### Великая война и разрушение (67 до Э.Р.)
+
+В 67 году до Э.Р. во время Великой войны Барраир был разрушен. Согласно историческим хроникам, город был разрушен иценами и месами, которые видели в нём символ того, что они хотели стереть. После разрушения на месте Барраира был построен город Гарды.
+
+## География/Контекст/Среда
+
+- **Расположение:** Левый берег реки Веруна, позднее - оба берега. К северу - Тёмный лес, к юго-западу Лунные горы, с поселениями гномов.
+- **Рельеф:** Гористый с большими долинами
 - **Климат:** Умеренный
 
-## Население
-- **Численность:** 30000
-- **Основные народы:** 
-- **Языки:** 
+## Структура и состав
+
+Барраир был спланирован как типичный город гномов, с акцентом на прочность и функциональность. Архитектура включала массивные арочные своды, способные выдержать землетрясения. В городе хранились фрагменты языка цвергов, поющие кристаллы и легенды о Сердце Земли.
 
 ## Экономика
-- **Основные отрасли:** 
-- торговля
-- сельское хозяйство
 
-- **Торговля:** 
-- **Ремёсла:** 
+- **Основные отрасли:** торговля, сельское хозяйство
+- **Торговля:** Торговые связи с соседними народами.
+- **Ремёсла:** Металлургия, каменное дело, создание артефактов.
 
-## Культура
-- **Религия:** 
-- **Архитектура:** 
-- **Обычаи:** 
+## Инфраструктура/Технологии/Механики
 
-## Современное состояние
-- **Проблемы:** 
-- **Развитие:** 
+Барраир был построен с использованием передовых технологий цвергов, включая:
 
-## Автоматические связи
-### Обитатели
-```dataview
-LIST FROM #people OR #character
-WHERE (
-    contains(file.outlinks, [[Барраир]]) OR
-    contains(file.tags, "Барраир") OR
-    regexmatch(file.text, "#Барраир") OR
-    regexmatch(file.text, "\\[\\[Барраир(\\||\\]\\])")
-) AND file.name != this.file.name
-```
+- **Цемент Цвергов:** Уникальный строительный материал, не разрушающийся ни водой, ни огнём, ни временем.
+- **Архитектура:** Массивные арочные своды, способные выдержать землетрясения.
+- **Хранилища знаний:** Фрагменты языка цвергов, поющие кристаллы, легенды о Сердце Земли.
 
-### Населённые пункты
-```dataview
-LIST FROM #place
-WHERE (
-    contains(file.outlinks, [[Барраир]]) OR
-    contains(file.tags, "Барраир") OR
-    regexmatch(file.text, "#Барраир") OR
-    regexmatch(file.text, "\\[\\[Барраир(\\||\\]\\])")
-    AND (type = "Город" OR type = "Деревня")
-    AND file.name != this.file.name
-)
-```
+## Культура/Социальные аспекты
 
-### Подлокации
-```dataview
-LIST FROM #place
-WHERE (
-    (contains(file.outlinks, [[Барраир]]) OR
-     contains(file.tags, "Барраир") OR
-     regexmatch(file.text, "#Барраир") OR
-     regexmatch(file.text, "\\[\\[Барраир(\\||\\]\\])"))
-    AND (type != "Город" AND type != "Деревня")
-    AND file.name != this.file.name
-)
-```
+- **Религия:** Поклонение Матери-Породе, культ предков.
+- **Архитектура:** Арочные своды с акустическими фокусами, усиливающими голос и способные противостоять движению геологических масс.
+- **Обычаи:** Обряд Именного Камня, Пир Молота.
 
-## Особенности
+## Связи и зависимости
 
+- **Связанные локации:** [[Гарды]], [[Велюградия]], [[Тёмный лес]], [[Лунные горы]]
+- **Связанные народы:** [[Гномы]], [[Цверги]], [[Ицены]], [[Бриготы]], [[Вирдоны]], [[Унеты]]
+- **События:** [[Великая война]], [[Падение Аэрина]]
 
-## Магия и техномагия
-- Используются ли магические устройства/артефакты?
-- Есть ли маги, техномаги, жрецы?
-- Как магия влияет на экономику, оборону, медицину?
+## Проблемы, риски, ограничения
 
+- **Разрушение:** Город был разрушен во время Великой войны.
+- **Утрата знаний:** Рецепт Цемента Цвергов утерян.
+- **Наследие:** Город стал символом прошлого, которое пытались стереть.
 
+## Примеры/кейсы/сценарии использования
 
- 
+- **Исторический пример:** Барраир как символ адаптации гномов к жизни на поверхности.
+- **Сценарий использования:** Поиск утерянных знаний о Цементе Цвергов для спасения современных городов от затопления.
+
+## Справочная секция
+
+### Термины
+
+- **Цемент Цвергов:** Уникальный строительный материал, созданный цвергами, обладающий исключительной прочностью.
+- **Койне:** Смешанный язык, возникший из языков местных народов.
+
+### Источники
+
+- [[Цверги]]
+- [[Гарды]]
+- [[Великая война]]
+- [[Календарь и летоисчисление]]
+
+### Ссылки на связанные заметки
+
+- [[Гарды]]
+- [[Цверги]]
+- [[Велюградия]]
+- [[Ицены]]
+- [[Бриготы]]
+- [[Вирдоны]]
+- [[Унеты]]
+- [[Великая война]]
+- [[Падение Аэрина]]
+- [[Календарь и летоисчисление]]
+- [[Тёмный лес]]
+- [[Лунные горы]]
