--- a/Локации/Города/Гарды_Описание.md
+++ b/Локации/Города/Гарды_Описание.md
@@ -1,6 +1,6 @@
 Гарды располагаются между Тёмным лесом на севере и Лунными горами на юго-западе, на берегу реки Веруна. Несмотря на близость к истоку, Веруна достаточно судоходна, что позволяет Гардам иметь хороший торговый порт.
 
-Гарды расположены на месте уничтоженного во время Великой Войны Барраяра, и частично построен из его камней. Восстановление и реконструкция города были начаты при [[Астер|Астере]] Великом и завершены при его сыне, [[Север_Астерус|Севере Астериусе]], сумевшем заключить договор с гномами Лунных гор.
+Гарды расположены на месте уничтоженного во время Великой Войны Барраира, и частично построен из его камней. Восстановление и реконструкция города были начаты при [[Астер|Астере]] Великом и завершены при его сыне, [[Север_Астерус|Севере Астериусе]], сумевшем заключить договор с гномами Лунных гор.
 
 ## Основные районы города
 - Детинец
