--- a/Локации/Провинции/Велюградия.md
+++ b/Локации/Провинции/Велюградия.md
@@ -1,26 +1,28 @@
-﻿---
+---
 created: 2025-07-31
 name: Велюградия
 type: Провинция
 climate: Умеренный
 tags:
   - place
-faction: ""
-state: "Гардарский_Союз"
-country: "Гардарский_Союз"
+state: Гардарский Союз
+country: Гардарский_Союз
 ---
 
 # Велюградия
 
 **Тип:** Провинция  
 **Климат:** Умеренный  
-**Фракция:**[[Гардарский_Союз]]]
+**Фракция:** [[Гардарский_Союз]]]
 
 ## Описание
+
 Провинция, затопленные земли
 
 ## Автоматические связи
+
 ### Обитатели
+
 ```dataview
 LIST FROM #people OR #character
 WHERE (
@@ -32,6 +34,7 @@ WHERE (
 ```
 
 ### Города провинции
+
 ```dataview
 LIST FROM #place OR #location
 WHERE (
@@ -44,6 +47,7 @@ WHERE (
 ```
 
 ### Подлокации
+
 ```dataview
 LIST FROM #place
 WHERE (
@@ -59,10 +63,6 @@ WHERE (
 
 ## Особенности
 
-
 ## Связанные персонажи
+
 Нет связей
-
-
-
-
