--- a/Локации/Провинции/Велюградия_2.md
+++ b/Локации/Провинции/Велюградия_2.md
@@ -11,6 +11,7 @@ tags:
   - активный
 project: "{{projectName}}"
 climate: Умеренный
+state: Гардарский_Союз
 country: Гардарский_Союз
 dominantFaction: Велюградия
 historicalPeriod: Средневековье
@@ -27,46 +28,60 @@ historicalPeriod: Средневековье
 **Исторический период:** Средневековье
 
 ## Описание
+
 111
 
 ## Население
+
 Не указано
 
 ## Экономика
+
 Не указана
 
 ## Фракции
+
 **Доминирующая:** Велюградия
 
 ### Второстепенные фракции
+
 Не указаны
 
 ## Населённые пункты
+
 ### Города
+
 Не указаны
 
 ### Деревни
+
 Не указаны
 
 ### Фортификации провинции
+
 ```dataview
 LIST FROM ""
 WHERE tags AND contains(tags, "фортификация") AND province = this.name AND file.name != this.file.name
 ```
 
 ## Особые территории
+
 ### Мёртвые зоны
+
 Не указаны
 
 ### Порты
+
 Не указаны
 
 ### Замки и крепости
+
 Не указаны
 
 ## Автоматические связи
 
 ### Все города провинции
+
 ```dataview
 LIST FROM ""
 WHERE type = "Город" 
@@ -74,13 +89,14 @@ AND province = this.name
 AND country = this.country 
 AND file.name != this.file.name
 ```
+
 —
 
 ### Все деревни провинции
+
 ```dataview
 LIST FROM ""
 WHERE type = "Деревня" 
 AND province = this.name
 AND country = this.country 
 AND file.name != this.file.name
-```
