Добавлен новый элемент "Создать город" в проект, обновлены настройки отображения папки "Без названия", удалены устаревшие файлы лора.

--- a/Тонущий_мир.md
+++ b/Тонущий_мир.md
@@ -34,6 +34,11 @@ fmtpIntegration: false
 ## Сводка проекта
 - [ ] #важно Храмы!
 
+```button
+name Создать город
+type command
+action Literary Templates: выбрать эпоху
+```
 ### Локации по статусам
 ```dataview
 TABLE type, status, statusReason
